--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "02-api-rest-nodejs",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --import tsx ./node_modules/knex/bin/cli.js",
@@ -19,6 +22,7 @@
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
+    "sqlite3": "^5.1.7",
     "vitest": "^2.1.8"
   },
   "dependencies": {
@@ -26,7 +30,7 @@
     "dotenv": "^16.4.7",
     "fastify": "^5.1.0",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
+    "pg": "^8.13.1",
     "zod": "^3.24.1"
   }
 }
