--- a/.env.test.example
+++ b/.env.test.example
@@ -1,3 +1,3 @@
 # NODE_ENV = Preenchida automaticamente pelo Vitest/Jest
-DATABASE_CLIENT="sqlite3"
-DATABASE_FILENAME="./db/test.db"
+DATABASE_CLIENT=sqlite3
+DATABASE_URL="./db/test.db"
